fix spacing on share page and framerate of Whammy

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2460,7 +2460,7 @@ li.active a, li.active a:hover {
 
 .at-share-btn{height: 0!important; width: 0!important;}
 
-
+.addthis-spacing{margin: 0px 20px!important;}
 
 /* ==========================================================================
 Helper classes
